--- a/deploy.yaml
+++ b/deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp
+  namespace: default
 spec:
   selector:
     matchLabels:
@@ -28,6 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: fleetman-webapp
+  namespace: default
 
 spec:
   # This defines which pods are going to be represented by this Service
