--- a/deploy.yaml
+++ b/deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp
-  namespace: default
+  namespace: jenkins
 spec:
   selector:
     matchLabels:
@@ -29,7 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: fleetman-webapp
-  namespace: default
+  namespace: jenkins
 
 spec:
   # This defines which pods are going to be represented by this Service
