--- a/deploy.yaml
+++ b/deploy.yaml
@@ -25,22 +25,22 @@ spec:
             path: /
             port: 80
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: fleetman-webapp
-  namespace: jenkins
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: fleetman-webapp
+#   namespace: jenkins
 
-spec:
-  # This defines which pods are going to be represented by this Service
-  # The service becomes a network endpoint for either other services
-  # or maybe external users to connect to (eg browser)
-  selector:
-    app: webapp
+# spec:
+#   # This defines which pods are going to be represented by this Service
+#   # The service becomes a network endpoint for either other services
+#   # or maybe external users to connect to (eg browser)
+#   selector:
+#     app: webapp
 
-  ports:
-    - name: http
-      port: 80
-      nodePort: 30080
+#   ports:
+#     - name: http
+#       port: 80
+#       nodePort: 30080
 
-  type: NodePort
+#   type: NodePort
